--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       <div class="about-content">
         <div class="col-1">
           <h3> I'm <span class="text-primary"> Islem Medjadj,</span> a web devoleper</h3>
-          <p>I'm a front-end web developer with a strong passion for creating visually appealing and user-friendly web
-            applications. I am very passionate about improving my coding skills & developing websites.
+          <p>I'm a front-end web developer and ui ux designer with a strong passion for creating visually appealing and user-friendly web
+            applications. I am very passionate about improving my coding skills & designing websites.
           </p>
-          <p>I have also gained a solid foundation in HTML, CSS. I am always eager to learn new technologies and
+          <p>I have also gained a solid foundation in HTML, CSS, FIGMA, WORDPRESS. I am always eager to learn new technologies and
             techniques to enhance my skillset. </p>
 
         </div>
@@ -353,5 +353,6 @@
 
 
 </body>
+
 
 </html>
