--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
             <p>CSS</p>
           </div>
           <div class="items">
-            <img src="img/javascript.png " alt="JAVASCRIPT">
-            <p>JAVASCRIPT</p>
+            <a href="https://www.flaticon.com/free-icons/wordpress" title="wordpress icons">Wordpress icons created by Freepik - Flaticon</a>
+            <p>WORDPRESS</p>
           </div>
           <div class="items">
             <img src="img/Figma Streamline SVG Logos.png" alt="FIGMA">
@@ -356,3 +356,4 @@
 
 
 </html>
+
