add wordpress skill

--- a/index.html
+++ b/index.html
@@ -69,10 +69,12 @@
       <div class="about-content">
         <div class="col-1">
           <h3> I'm <span class="text-primary"> Islem Medjadj,</span> a web devoleper</h3>
-          <p>I'm a front-end web developer and ui ux designer with a strong passion for creating visually appealing and user-friendly web
+          <p>I'm a front-end web developer and ui ux designer with a strong passion for creating visually appealing and
+            user-friendly web
             applications. I am very passionate about improving my coding skills & designing websites.
           </p>
-          <p>I have also gained a solid foundation in HTML, CSS, FIGMA, WORDPRESS. I am always eager to learn new technologies and
+          <p>I have also gained a solid foundation in HTML, CSS, FIGMA, WORDPRESS. I am always eager to learn new
+            technologies and
             techniques to enhance my skillset. </p>
 
         </div>
@@ -113,7 +115,7 @@
             <p>CSS</p>
           </div>
           <div class="items">
-            <a href="https://www.flaticon.com/free-icons/wordpress" title="wordpress icons">Wordpress icons created by Freepik - Flaticon</a>
+            <i class="fa-brands fa-wordpress fa-2xl"></i>
             <p>WORDPRESS</p>
           </div>
           <div class="items">
@@ -356,4 +358,3 @@
 
 
 </html>
-
