--- a/index.html
+++ b/index.html
@@ -111,11 +111,11 @@
             <p>HTML</p>
           </div>
           <div class="items">
-            <img src="img/css.png " alt="CSS">
+            <img src="img/CSS-icon.png" alt="CSS">
             <p>CSS</p>
           </div>
           <div class="items">
-            <i class="fa-brands fa-wordpress fa-2xl"></i>
+            <img src="img/wordpress.png" alt="WORDPRESS">
             <p>WORDPRESS</p>
           </div>
           <div class="items">
