--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <div class="items">
           <img src="img/laptop.png" alt="Web Development">
           <h3> Web Development</h3>
-          <p>I can build a website by using HTML, CSS, and JavaScript</p>
+          <p>I can build you high converting websites with friendly user interfaces.</p>
         </div>
         <div class="items">
           <img src="img/responsive.png" alt="Responsive">
